--- a/index.html
+++ b/index.html
@@ -15,26 +15,19 @@
 		<div id="topBar"></div>
 		<header id="header">
 			<h2 hidden> Header </h2>
-			<img src="images/roughLogo.png" id="headerLogo">
+			<img src="images/roughLogo.png" id="headerLogo" alt="brandLogo">
 			
-		<nav id="headerNav">
-			<div class="headerButton">
-				About Us
-			</div>
-			<div class="headerButton">
-				Our Products
-			</div>
-			<div class="headerButton">
-				Contact Us
-			</div>
-			<div class="headerButton">
-				Quality
-			</div>
-		</nav>
+			<nav id="headerNav">
+				<h2 hidden> Main Navigation </h2>
+				<a href="about.html" class="headerButton"> About Us</a>
+				<a href="products.html" class="headerButton"> Our Products</a>
+				<a href="contact.html" class="headerButton">Contact Us</a>
+				<a href="quality.html" class="headerButton">Quality</a>
+			</nav>
 			
 		</header>
-		<nav id="imgCycler">
-				<h3 hidden> imgCycler </h3>
+		<section id="imgCycler">
+				<h2 hidden> Image Cycle Buttons/ Divider Bar </h2>
 				<div class="imgButtons">
 				</div>
 				<div class="imgButtons">
@@ -45,75 +38,51 @@
 				</div>
 				<div class="imgButtons">
 				</div>
-		</nav>
+		</section>
 
-		<div id="newsSection">
-			<h2 hidden> Hero Image </h2>
-			<div id="heroImage">
+		<section id="adHeadline1"> 
+			<h2 hidden> Headline / New Product Advertising </h2>
+			<div id="headlineImages">
+				<img src="images/canPlaceHolder.png" alt="image of two cans of egg">
+				<img src="images/bottlePlaceHolder.png" alt="image of a bottle of egg, next to several loose eggs">
 			</div>
-			<div id="belowHero">
-			<nav id="newsNav">
-				<h2 hidden> Breaking News Navigation </h2>
-				<div class="newsNavButtons">
-				</div>
-				<div class="newsNavButtons">
-				</div>
-				<div class="newsNavButtons">
-				</div>
-				<div class="newsNavButtons">
-				</div>
-				<div class="newsNavButtons">
-				</div>
-			</nav>
-		</div>
+			
+			<div id="headlineText">
+				<p class="headline1">Lay your eyes on our</p>
+				<p id="headline2"> Egg-citing </p>
+				<p class="headline1"> line of new products</p>
+			</div>
+		</section>
+		<div id="adHeadline2">
+			<a id="adButton" href="products"> chick them out! </a>
 		</div>
 
-		<div id="testimonials">
-			<h2 hidden> Testimonials </h2>
-			<div class="testimonialBody">
-				<div class="testimonialImg">
-				</div>
-				<div class="testimonialText">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				</div>
+		<section id="certifications">
+			<h2 hidden> Our Certification Guarantee </h2>
+			<div id="certHeadline">
+				<p id="qualitySafe"> Quality, safe eggs, </p>
+				<p id="guareggteed"> Guareggteed. </p>
 			</div>
-			<div class="testimonialBody">
-				<div class="testimonialImg">
+			<div id="certRight">
+				<div id="certText">
+					<p>The Gray Ridge brand is built on quality. Here are the agencies we work with to ensure that quality and food safety is integrated into everthing we do. </p>
 				</div>
-				<div class="testimonialText">
-					Tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				</div>
+				<a href="quality.html" id="certButton">View our Certifications </a>
 			</div>
-			<div class="testimonialBody">
-				<div class="testimonialImg">
-				</div>
-				<div class="testimonialText">
-					Consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				</div>
-			</div>
-			<div class="testimonialBody">
-				<div class="testimonialImg">
-				</div>
-				<div class="testimonialText">
-					Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</div>
-			</div>
-		</div>
+		</section>
 
 		<footer id="footer">
 			<h2 hidden> Footer </h2>
-			<div id="footerLogo">
-			</div>
-			<nav id="footerNav">
-				<h3 hidden> Footer Nav </h3>
+			<nav class="footerNav">
+				<h2 hidden> Footer Nav 1</h2>
 				<div class="footerNavButtons">
 				</div>
 				<div class="footerNavButtons">
 				</div>
-				<div class="footerNavButtons">
-				</div>
+			</nav>
+			<img src="images/roughLogo.png" id="footerLogo" alt="image of the brand logo">
+			<nav class="footerNav">
+				<h2 hidden> Footer Nav 2</h2>
 				<div class="footerNavButtons">
 				</div>
 				<div class="footerNavButtons">
